# python-type-hints-checker

./: Cargo.toml  README.md  ok.py  test_file.py  test_file2.py
src/: main.rs
