[package]
name = "python-type-hints-checker"
version = "0.1.2"
edition = "2021"
description = "Checks Python files for missing type hints in function parameters and return values."
license = "MIT"
readme = "README.md"
repository = "https://github.com/AloizioMacedo/python-type-hints-checker"

[[bin]]
name = "pythcheck"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.
debug = 2

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
rayon = "1.7.0"
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"
tree-sitter-traversal = "0.1.2"
walkdir = "2.3.3"
